Fix menu overflow issues for viewport width 900 - 1200

--- a/src/index.css
+++ b/src/index.css
@@ -138,13 +138,10 @@ img {
 }
 
 /* Responsive Desktop Font */
-@media (min-width: 900px) {
+@media (width >= 900px) {
     .title h1 {
-        font-size: clamp(2.5rem, 4vw, 3.5rem);
+        font-size: clamp(2.4rem, 4vw, 3.5rem);
     }
-}
-
-@media (max-width: 900px) {
 }
 
 /* Responsive Mobile Font */
